<resources>
    <string name="app_name">The Traveling Salesman</string>
    <string name="action_settings">Settings</string>

    <!-- titles -->

    <string name="title_activity_expenses">Expenses</string>
    <string name="title_activity_expense_add">ExpenseAdd</string>
    <string name="title_activity_expense_details">ExpenseDetails</string>
    <string name="title_activity_travel">Travel</string>
    <string name="title_activity_travel_detail">TravelDetail</string>
    <string name="title_activity_client_edit">Edit client</string>
    <string name="title_activity_reports">Reports</string>
    <string name="title_activity_task_add">Add a task</string>
    <string name="title_activity_landing">My Clients</string>
    <string name="title_activity_notification">Notification</string>
    <string name="title_activity_task">All Tasks</string>
    <string name="title_activity_client">Client Activity</string>

    <string-array name="client_array">
        <item>Client1</item>
        <item>Client2</item>
        <item>Client3</item>
        <item>Client0</item>
    </string-array>
    <string name="notifications">Notifications</string>
    <string name="reminders">Reminders</string>
    <string name="message">Message</string>
    <string name="trip">Trip</string>
    <string name="export_data">Export Data</string>
    <string name="conn_linkedin">Connect to LinkedIn</string>
    <string name="help">Help</string>
    <string name="exit">Exit</string>
    <string name="clients">Clients</string>
    <string name="travel">Travel</string>
    <string name="expense">Expenses</string>
    <string name="reports">Reports</string>
    <string name="tasks">Tasks</string>
    <!-- Reports submenu -->
    <string name="client_report">Client Report</string>
    <string name="expense_report">Expense Report</string>
    <string name="upcoming_travels">Upcoming Travels</string>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>


    <!-- Client details -->
    <string name="name">Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="company">Company</string>
    <string name="designation">Designation</string>
    <string name="notes">Notes</string>
    <string name="group">Group</string>
    <string name="dob">Date of birth</string>
    <string-array name="pick_or_take_a_photo">
        <item>"Pick a photo from gallery"</item>
        <item>"Take a photo"</item>
    </string-array>

    <string name="new_note">New Note</string>
    <string name="client_name">Client Name</string>
    <string name="emails">Emails</string>

    <string name="sms">Messages</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>
    <string name="edit">Edit</string>

    <string name="linkedIn">LinkedIn</string>
    <!-- Add Task  -->
    <string name="hint_task_new">New task, note</string>
    <string name="client">Client</string>
    <string-array name="tab_titles_client">
        <item>Tasks</item>
        <item>Call</item>
        <item>Text</item>
        <item>Mail</item>
    </string-array>
    <string-array name="tab_titles_task">
        <item>Time</item>
        <item>Invite</item>
        <item>Location</item>
        <!--item>Notes</item-->
    </string-array>
    <string name="location">Location</string>
    <string-array name="tab_titles_landing">
        <item>Recent</item>
        <item>All</item>
        <item>Favorite</item>
    </string-array>
    <string name="note">Note</string>
    <string name="title_activity_trip_exp_man">TripExpMan</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="client_search_title">Search client</string>

    <string name="r_u_sure">Are you sure you want to delete this %s ?</string>
    <string name="title_activity_task_list_with_calendar">TaskListWithCalendar</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_client_info">ClientInfoActivity</string>
    <string name="title_activity_dbutility_trav_exp">DBUtilityTravExp</string>
</resources>
