<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_clients"
            android:title="@string/clients" />

        <item
            android:id="@+id/nav_tasks"
            android:title="@string/tasks" />
        <item
            android:id="@+id/nav_reminders"
            android:title="@string/reminders" />

        <item
            android:id="@+id/nav_expenses"
            android:title="@string/expense" />
        <item
            android:id="@+id/nav_trip"
            android:title="@string/trip" />

        <item
            android:id="@+id/nav_reports"
            android:title="@string/reports">

        </item>


        <item
            android:id="@+id/nav_settings"
            android:title="@string/action_settings" />

        <item
            android:id="@+id/nav_exit"
            android:title="@string/exit" />


        <!--item
            android:id="@+id/nav_travel"
            android:title="@string/travel"/>
        <item
            android:id="@+id/nav_expense"
            android:title="@string/expense"/-->

    </group>


</menu>