<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_trip"
        android:title="@string/trip"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_card_travel_white_18dp"
        />

    <item
        android:id="@+id/action_expense"
        android:title="@string/expense"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_money_white"
        />
    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_person_outline_white_24dp"
        android:title="Client Info"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_help"
        android:title="@string/help"
        app:showAsAction="never"/>

</menu>