<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="6dp"
        android:src="@drawable/avatar" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:layout_alignTop="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:layout_marginStart="20dp" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:layout_below="@+id/firstName"
        android:layout_alignStart="@+id/firstName"
        android:layout_alignEnd="@+id/firstName" />
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/phoneLayout"
    android:layout_below="@+id/imageView"
    android:layout_alignEnd="@+id/lastName">
    <TextView
        android:id="@+id/phoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/phone"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <TextView
        android:id="@+id/mobileLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mobile"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:layout_below="@+id/phoneLabel"
        android:layout_alignParentEnd="true" />
</RelativeLayout>


    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/email"
        android:layout_alignBottom="@+id/email"
        android:layout_alignParentStart="true"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneLayout"
        android:layout_gravity="left|top"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_alignEnd="@+id/phoneLayout"
        android:layout_alignStart="@+id/lastName" />

    <TextView
        android:id="@+id/addrLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/address"
        android:layout_alignBottom="@+id/address"
        android:layout_alignParentStart="true"
        android:text="@string/address"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/email"
        android:layout_below="@+id/email"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:layout_alignEnd="@+id/email" />

    <TextView
        android:id="@+id/companyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/company"
        android:layout_alignBottom="@+id/company"
        android:layout_alignParentStart="true"
        android:text="@string/company"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/address"
        android:layout_below="@+id/address"
        android:hint="@string/company"
        android:layout_alignEnd="@+id/address" />

    <TextView
        android:id="@+id/designLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/designation"
        android:layout_alignBottom="@+id/designation"
        android:layout_alignParentStart="true"
        android:text="@string/designation"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/designation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/company"
        android:layout_below="@+id/company"
        android:hint="@string/designation"
        android:layout_alignEnd="@+id/company" />

    <TextView
        android:id="@+id/notesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/designation"
        android:text="@string/notes"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/notesLabel"
        android:hint="@string/notes"
        android:maxLines="5"
        android:layout_alignEnd="@+id/group" />

    <TextView
        android:id="@+id/groupLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/note"
        android:text="Groups"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/designation"
        android:layout_below="@+id/groupLabel"
        android:layout_gravity="center_horizontal"
        android:hint="@string/group" />


</RelativeLayout>

