<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.appers.ayvaz.thetravelingsalesman.ReportsExpenseActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/clients"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/trip"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_marginBottom="10dp"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/amount"
        android:id="@+id/textView3"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/date"
        android:layout_marginBottom="10dp"
        android:id="@+id/expDate"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignStart="@+id/editText12" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"
        android:layout_alignStart="@+id/editText9" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText9"
        android:layout_below="@+id/textView2"
        android:layout_alignEnd="@+id/spinner"
        android:layout_toEndOf="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignStart="@+id/editText12" />

    <EditText
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editText11"
        android:layout_above="@+id/editText12"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView3" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:text="New Button"
        android:id="@+id/button3"

        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText10"
        android:layout_alignBottom="@+id/button3"
        android:layout_toStartOf="@+id/editText11" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="30dp"
        android:layout_height="20dp"

        android:text="New Button"
        android:id="@+id/button2"
        android:layout_alignTop="@+id/editText11"
        android:layout_alignStart="@+id/editText11" />

    <EditText
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText12"
        android:layout_marginStart="22dp"
        android:layout_alignBottom="@+id/expDate"
        android:layout_toEndOf="@+id/textView3" />
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/expDate">

    </android.support.v7.widget.RecyclerView>


</RelativeLayout>
